--- a/Lesson_8/package.json
+++ b/Lesson_8/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson_5",
+  "name": "lesson_8",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,12 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-mssql": "^1.5.0",
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-beta.3",
-    "cookies": "^0.7.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mssql": "^4.1.0"
+    "mongodb": "^3.0.1"
   }
 }
